feat(revert): chat, review